k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: weather-api
  namespace: default

spec:
  replicas: 2

  selector:
    matchLabels:
      app: weather-api

  template:
    metadata:
      labels:
        app: weather-api

    spec:
      containers:
        - name: weather-api
          image: weather-api:v4
          imagePullPolicy: Never

          volumeMounts:
            - name: weather-storage
              mountPath: /app/data

          ports:
            - containerPort: 5000

      volumes:
        - name: weather-storage
          persistentVolumeClaim:
            claimName: weather-pvc
