k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: weather-frontend

spec:
  replicas: 2

  selector:
    matchLabels:
      app: weather-frontend
  
  template:
    metadata:
      labels:
        app: weather-frontend

    spec: 
      containers:
      - name: weather-frontend
        image: weather-app:v2
        imagePullPolicy: Never

        ports:
          - containerPort: 80
