k8s/api-service.yaml
apiVersion: v1 
kind: Service

metadata:
  name: weather-api-service 

spec:
  type: ClusterIP

  selector:
    app: weather-api


  ports:
    - port: 5000
      targetPort: 5000
