k8s/frontend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: weather-frontend-service

spec:
  type: ClusterIP

  selector:
    app: weather-frontend

  ports:
    - port: 80
      targetPort: 80
