k8s/weather-ingress.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress

metadata:
  name: weather-ingress

spec:
  ingressClassName: nginx

  rules:
    - host: weather.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: weather-frontend-service
                port:
                  number: 80
